[package]
name = "crime"
description = "Concurrent real-time interface for multimedia engines"
homepage = "https://github.com/rimelabs/crime"
repository = "https://github.com/rimelabs/crime"
version = "0.3.2"
edition = "2024"
license = "LGPL-2.1-or-later"
readme = "README.md"

[dependencies]
async-stream = "0.3.6"
audio-codec-algorithms = "0.7.0"
futures = "0.3.31"
half = "2.6.0"
mp3lame-encoder = "0.2.1"
realfft = "3.5.0"
rubato = "0.16.2"
